--- a/style.css
+++ b/style.css
@@ -1,72 +1,91 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800&family=Poppins:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;600;800;900&family=Poppins:wght@300;400;500;600&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    text-decoration: none;
+    list-style: none;
     scroll-padding-top: 3rem;
-    font-family: var(--font-family-2);
+    font-family: 'Poppins',sans-serif;
 }
 :root{
-    --main-color:;
-    --second-color:;
+    --bg-color:#2a2a2a;
+    --second-bg-color:#202020;
     --text-color:#f9f6f2;
-    --container-color:#454545;
-    --bg-color:#000302;
+    --second-color:#454545;
+    --main-color:#05b4ff;
+    --big-font:5rem;
+    --h2-font:3rem;
+    --p-font:1.1rem;
     --text-alter-color:#555D50;
-    --poppins-font:'Poppins', sans-serif;
-    --font-family-2: 'Playfair Display', serif;
 }
 body{
-    color:var(--text-color);
-    background-color:var(--bg-color);
-}
-a{
-    text-decoration: none;
-}
-img{
-    max-width: 100%;
-}
-section{
-    padding: 3rem 0 2rem;
-}
-.container{
-    max-width: 1060px;
-    margin: auto;
-    width: 100%;
+    background: var(--bg-color);
+    color: var(--text-color); 
+
 }
 header{
     position: fixed;
-    top: 20px;
-    left:0;
-    width: 100%;
-    z-index: 100;
-}
-.nav{
+    width:100%;
+    top:0;
+    right:0;
+    z-index: 1000;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    background-color: var(--text-color);
-    padding:17px 20px;
-    border-radius: 2rem;
+    justify-content: center;
+    background: transparent;
+    padding: 22px 15%;
+    border-bottom: 1px solid transparent;
+    transition: all .45s ease;
 }
 .logo{
-    font-size: 1.6rem;
+    color: var(--text-color);
+    font-size: 35px;
     font-weight: 700;
-    color: var(--container-color);
+    letter-spacing: 1px;
 }
-.navbar{
+span{
+    color: var(--main-color);
+}
+.navlist{
+    display: flex;
+}
+.navlist a{
+    color: var(--second-color);
+    font-size: 17px;
+    font-weight: 500;
+    margin: 0 35px;
+    transition: all .45s ease;
+}
+.navlist a:hover{
+    color: var(--main-color);
+}
+.navlist a:active{
+    color:var(--main-color);
+}
+#menu-icon{
+    font-size: 35px;
+    color:var(--text-color);
+    z-index: 1000;
+    cursor: pointer;
+    display: none;
+    margin-left: 25px;
+}
+section{
+    padding: 160px 15% 128px;
+}
+.home{
+    position:relative;
+    height:100vh;
+    width:100%;
+    background-image: url();
+    background-size: cover;
+    background-position:center;
     display: flex;
     align-items: center;
-    column-gap: 1.6rem;
+    justify-content: flex-start;
+
 }
-.nav-link{
-    font-size: 0.88rem;
-    color: var(--text-alter-color);
-    font-family: var(--poppins-font);
-    transition: 0.3s all cubic-bezier(0.075,0.82,0.165,1);
-}
-.nav-link:hover{
-    color: var(--bg-color);
-    transition: 0.3s all cubic-bezier(0.075,0.82,0.165,1);
-}
+
