--- a/style.css
+++ b/style.css
@@ -86,6 +86,38 @@ section{
     display: flex;
     align-items: center;
     justify-content: flex-start;
-
 }
+.contact{
+    background-color: var(--second-bg-color);
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    gap:2.5rem;
+}
+.contact-text h2{
+    font-size: var(--second-color);
+    line-height: 1.8;
+}
+.contact-text h4{
+    color:var(--text-color);
+    margin: 18px 0;
+    font-size: 20px;
+    font-weight: 600;
+}
+.contact-form p{
+    color:var(--second-color);
+    font-size: var(--p-font);
+    line-height: 1.8;
+    margin-bottom: 30px;
+}
+.list{
+    margin-bottom:2.8rem;
+}
+.list li{
+    display:block;
+    color: var(--second-color);
+    font-size: 14px;
+    transition: all .45s ease;
+}
+
 
